<resources>
    <string name="app_name">TwiceApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ribbon">Лента</string>
    <string name="participants">Участницы</string>
    <string name="details">Подробности</string>
    <string name="facts">Факты</string>
    <string name="photo">Фотографии</string>
    <string name="albums">Альбомы</string>
    <string name="checkout">Оформление заказа</string>
    <string name="tours">Туры</string>
    <string name="about_group">О группе</string>
    <string name="concert">концерт в Сеуле 23.33.33</string>
    <string name="aboutGroup">Twice (кор. 트와이스, яп. トゥワイス; часто стилизуется как TWICE) — южнокорейская гёрл-группа, сформированная в 2015 году компанией JYP Entertainment через реалити-шоу «Шестнадцать» (англ. Sixteen). Коллектив состоит из девяти участниц: Чжихё (она же лидер), Наён, Чонён, Момо, Саны, Мины, Дахён, Чхэён и Цзыюй. Дебют состоялся 20 октября 2015 года с мини-альбомом The Story Begins[1]. Популярность коллектива значительно возросла весной 2016 года с выходом сингла «Cheer Up»: сингл дебютировал с первого места цифрового чарта Gaon и стал самым успешным среди синглов всех исполнителей, выпущенных в тот же год. Песня дважды становилась «Песней Года» на двух главных музыкальных премиях — Mnet Asian Music Awards и Melon Music Awards[2][3][4]. Их последующий сингл «TT» с третьего мини-альбома TWICEcoaster: Lane 1 оставался на вершине того же чарта на протяжении четырёх недель[5][6][7][8]. Альбом также стал самым продаваемым за год среди женских корейских групп (на конец года количество проданных копий составило более 350 тысяч)[9]. Менее, чем за 19 месяцев после дебюта Twice продали более 1,2 миллиона своих альбомов на территории Кореи[10][11]. Японский дебют состоялся 28 июня 2017 года под лейблом Warner Music Japan со сборником хитов #Twice. Альбом дебютировал на 2 месте в альбомном чарте Oricon, менее чем за неделю было продано 136 157 копий, что ознаменовало наивысший показатель продаж среди корейских артистов на японском рынке за первые семь дней за последние два года[12][13]. 18 октября был выпущен первый оригинальный японский сингл «One More Time». Продав более 250 тысяч копий, Twice стали первой корейской женской группой, которая за один календарный год получила платиновую сертификацию от RIAJ как за CD-сингл, так и за альбом[14][15]. По итогам 2017 года в рейтинге Billboard Japan группа заняла третье место в списке лучших артистов[16]. По данным на март 2019 года, суммарные продажи Twice в чартах Gaon и Oricon составляют более 5 миллионов копий, что делает их самой продаваемой корейской женской группой[17][18]. После релиза седьмого мини-альбома Fancy You Twice стали самой продаваемой корейской женской группой за всё время с продажами более трёх миллионов и 750 тысяч копий, побив рекорд S.E.S., которая удерживала его в течение двадцати одного года[19].</string>
    <string name="text">Цзуи Вижуал</string>
    <string name="detail">Подробности</string>
    <string name="photo_txt">Фотографии</string>
    <string name="nick">- Прозвище :</string>
    <string name="jype_15_2012">- Присоеденилась к JYPE 15 ноября, 2012 года</string>
    <string name="favorite_color">- Любимый цвет :</string>
    <string name="high">- Самая высокая в группе</string>
    <string name="another">Другие участницы</string>
</resources>