<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.siroca.twiceapp.ui.fragment.ribbon.NewsFragment"
        android:label="@string/ribbon"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/participantsFragment"
        android:name="com.siroca.twiceapp.ui.fragment.participants.ParticipantsFragment"
        android:label="@string/participants"
        tools:layout="@layout/fragment_participants">
        <action
            android:id="@+id/action_participantsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.siroca.twiceapp.ui.fragment.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_detailsFragment_to_photoFragment"
            app:destination="@id/photoFragment" />
        <action
            android:id="@+id/action_detailsFragment_to_factsFragment"
            app:destination="@id/factsFragment" />
    </fragment>
    <fragment
        android:id="@+id/factsFragment"
        android:name="com.siroca.twiceapp.ui.fragment.facts.FactsFragment"
        android:label="@string/facts"
        tools:layout="@layout/fragment_facts" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/photoFragment"
        android:name="com.siroca.twiceapp.ui.fragment.photo.PhotoFragment"
        android:label="@string/photo"
        tools:layout="@layout/fragment_photo" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.siroca.twiceapp.ui.fragment.albums.AlbumsFragment"
        android:label="@string/albums"
        tools:layout="@layout/fragment_albums" >
        <action
            android:id="@+id/action_albumsFragment_to_buyFragment"
            app:destination="@id/buyFragment"/>
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.siroca.twiceapp.ui.fragment.checkout.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" />
    <fragment
        android:id="@+id/buyFragment"
        android:name="com.siroca.twiceapp.ui.fragment.buy.BuyFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_buy">
    <argument
        android:name="id"
        app:argType="string" />
</fragment>
    <fragment
        android:id="@+id/toursFragment"
        android:name="com.siroca.twiceapp.ui.fragment.tours.ToursFragment"
        android:label="@string/tours"
        tools:layout="@layout/fragment_tours" />
    <fragment
        android:id="@+id/groupFragment"
        android:name="com.siroca.twiceapp.ui.fragment.group.GroupFragment"
        android:label="@string/about_group"
        tools:layout="@layout/fragment_group" />
</navigation>